fixed some spacing,design still need work

--- a/client/style.less
+++ b/client/style.less
@@ -1,7 +1,8 @@
 #head {
-  height: 200px;
+  height: 100px;
   width: 300px;
   margin: 0 auto;
+  font-family: verdana;
 }
 
 #get-zip {
@@ -17,37 +18,39 @@ h1{
   background-image: linear-gradient(to top left, blue, orange);
   opacity: .7;
   color: white;
-  font-family: verdana, sans-serif;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size:10px;
+  box-shadow: 0 0 20px black;
 
   margin: 0 auto;
 }
 
 #currcity {
   width:400px;
-  padding-top:30px;
-  padding-left: 5px;
+  padding-top:25px;
+  padding-left: 10px;
   font-size:2.5em;
   text-align: center;
 }
 
-#currstate {
+#currdate {
   width:400px;
   padding-top:10px;
+  padding-left:5px;
   font-size: 1.5em;
   text-align: center;
 }
 
 #currtemp {
   width:400px;
-  padding:10px 0;
+  padding:10px 0 0 5px;
   font-size:4.5em;
   text-align: center;
 }
 
 #currclimate {
   width:400px;
-  padding:15px 0;
+  padding:15px 0 0 5px;
   font-size:2em;
   text-align: center;
 }
@@ -55,14 +58,22 @@ h1{
 #showYesterday {
   width:400px;
   font-size:1em;
-  text-align: center;
+  margin-left: 8px;
+  // text-align: center;
 }
 
 #yesterdayTemp {
   width:400px;
   font-size:1em;
-  text-align: center;
+  margin-left:12px;
+  // text-align: center;
 }
+
+.info.day {
+  font-size:20px;
+  font-weight: bold;
+}
+
 .days {
   width:400px;
   padding:10px 0 15px 20px;
@@ -75,28 +86,4 @@ h1{
   padding-top: 12px;
   padding-right: 15px;
   text-align: center;
-}
-
-.day {
-  // text-align: center;
-  // padding-right: 15px;
-}
-
-.date {
-
-}
-
-.iconimg {
-  // text-align: center;
-  // padding-right: 15px;
-}
-
-.high {
-  // text-align: center;
-  // padding-right: 15px;
-}
-
-.low {
-  // text-align: center;
-  // padding-right: 15px;
 }
